--- a/css/team.css
+++ b/css/team.css
@@ -112,10 +112,13 @@
 }
 
 
-@media screen and(max-width:300px) {
-    .gallery-page-img-container{
-        width: 13rem;
+@media screen and(max-width:479px) {
+    .gallery-page-img-container {
+        width: 20rem;
     }
+    /* .gallery-page-img-container{
+        max-width: 19rem;
+    } */
     .gallery-page-container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -123,8 +126,8 @@
     }
 }
 
-@media screen and (max-width:386PX) {
+@media screen and (max-width:510PX) {
     .gallery-page-img-container {
-        width: 18rem;
+       max-width: 20rem;
     }
 }
