--- a/css/team.css
+++ b/css/team.css
@@ -122,7 +122,7 @@
 }
         @media screen and (max-width:361px){
             .gallery-page-img-container {
-               max-width:max(17rem,15em) ;
+               max-width:min(17rem,15em) ;
             }
             
         }
